--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "babel-plugin-webpack-import-ignore",
+  "version": "1.0.0",
   "main": "src/babel-plugin-webpack-import-ignore.js",
   "packageManager": "yarn@4.9.1"
 }
